Ajouter le prefix api aux routes de l'api [closes #9]
